--- a/contact.html
+++ b/contact.html
@@ -1,76 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Events | HOME</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Amazing Events | HOME</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 </head>
+
 <body>
-    <header>
+  <header>
 
-        <nav class="navbar navbar-expand-lg bg-secondary d-flex">
-            <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="./past.html">Past Events</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="#">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="./stats.html">Stats</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h1 class="pb-4">Contact us</h1>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/Cine7.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 class="pb-4">Contact us</h1>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 class="pb-4">Contact us</h1>
-                  </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+    <nav class="navbar navbar-expand-lg bg-secondary d-flex">
+      <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./past.html">Past Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./stats.html">Stats</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="bg-danger-subtle">
+    <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 class="pb-4">Contact us</h1>
           </div>
-    </main>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/images/Cine7.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 class="pb-4">Contact us</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 class="pb-4">Contact us</h1>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <form class="container-fluid  d-flex flex-column justify-content-center align-items-center pt-4">
+      <div>
+        <div>
+          <label class="pb-3">Name:
+            <input class="form-control" type="text" name="Name">
+          </label>
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Email:
+            <input type="email" class="form-control" placeholder="name@example.com">
+          </label>
 
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Message:
+            <input class="form-control caja" id="exampleFormControlTextarea1" rows="3">
+          </label>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Send</button>
+    </form>
+  </main>
+  <footer class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <img
+      src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
+      alt="" id="iconos" class="pt-2 ps-5">
+
+    <h4 class="pt-2 pe-5">Cohort 44/45</h4>
+
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
