--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
 
-        <nav class="navbar navbar-expand-lg bg-secondary d-flex">
+        <nav class="navbar navbar-expand-lg bg-secondary d-flex ">
             <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
@@ -41,7 +41,7 @@
         </nav>
     </header>
     <main class="bg-danger-subtle">
-        <div id="carouselExampleCaptions" class="carousel slide">
+        <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
@@ -73,23 +73,23 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="d-flex align-items-center justify-content-between pt-4">
+        <div class="d-flex align-items-center justify-content-between pt-4 ">
             <div>
                 <div class="form-check form-check-inline ms-5 ">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Parties</label>
+                    <label class="form-check-label" for="inlineCheckbox1">Food Fair</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Cinemas</label>
+                    <label class="form-check-label" for="inlineCheckbox1">Museum</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Libraries</label>
+                    <label class="form-check-label" for="inlineCheckbox1">Costume Party</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Concerts</label>
+                    <label class="form-check-label" for="inlineCheckbox1">Music Concert</label>
                 </div>
                 <div class="form-check form-check-inline ms-2">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -103,40 +103,64 @@
         </div>
         <div class="d-flex mt-5 justify-content-evenly pb-5">
             <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Fiesta de disfraces1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Maraton3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem;">
-                <img src="./assets/images/Salida al museo5.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem;">
                 <img src="./assets/images/Feria de comidas7.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Festival of the collectivities</h5>
+                    <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the
+                        whole family.</p>
+                    <div class="d-flex justify-content-between mt-5 align-items-center ">
+                        <p>Prize: $5 USD</p>
+                        <a href="./carts.html" class="btn btn-primary">See More</a>
+                    </div>
+
                 </div>
-              </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/images/Salida al museo5.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Jurassic Park</h5>
+                    <p class="card-text">Let's go to the paleontology museum for an incredible tour to learn about the
+                        largest dinosaurs.</p>
+                    <div class="d-flex justify-content-between mt-4 align-items-center">
+                        <p>Prize: $15 USD </p>
+                        <a href="./carts.html" class="btn btn-primary">See More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/images/Fiesta de disfraces1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Halloween Night</h5>
+                    <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
+                    <div class="d-flex justify-content-between mt-5 pt-3 align-items-center">
+                        <p>Prize: $12 USD</p>
+                        <a href="./carts.html" class="btn btn-primary">See More</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="./assets/images/Concierto de musica1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Metallica in concert</h5>
+                    <p class="card-text pb-2">The only concert of the most emblematic band in the world</p>
+                    <div class="d-flex justify-content-between mt-5 pt-4 align-items-center">
+                        <p>Prize: $150 USD</p>
+                        <a href="./carts.html" class="btn btn-primary">See More</a>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </main>
+    <footer class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
 
+        <img src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
+            alt="" id="iconos" class="pt-2 ps-5">
+
+        <h4 class="pt-2 pe-5">Cohort 44/45</h4>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
