--- a/upcoming.html
+++ b/upcoming.html
@@ -1,76 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Events | HOME</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Amazing Events | UPCOMING EVENTS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
 </head>
+
 <body>
-    <header>
+  <header>
 
-        <nav class="navbar navbar-expand-lg bg-secondary d-flex">
-            <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="#">Upcoming Events</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="./past.html">Past Events</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="./contact.html">Contact</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn boton me-4" href="./stats.html">Stats</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main>
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h1 class="pb-4">Upcoming Events</h1>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/Cine7.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 class="pb-4">Upcoming Events</h1>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h1 class="pb-4">Upcoming Events</h1>
-                  </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+    <nav class="navbar navbar-expand-lg bg-secondary d-flex">
+      <img class=" col-lg-2 col-md-2 ms-5" src="./assets/images/logo.png" alt="">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse justify-content-end me-5" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="#">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./past.html">Past Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./stats.html">Stats</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="bg-danger-subtle">
+    <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark ">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/images/books.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 class="pb-4">Upcoming Events</h1>
           </div>
-    </main>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/images/Cine7.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 class="pb-4">Upcoming Events</h1>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/images/Concierto de musica1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h1 class="pb-4">Upcoming Events</h1>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <div class="d-flex align-items-center justify-content-between pt-4">
+      <div>
+        <div class="form-check form-check-inline ms-5 ">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Parties</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Cinemas</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Libraries</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Concerts</label>
+        </div>
+        <div class="form-check form-check-inline ms-2">
+          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+          <label class="form-check-label" for="inlineCheckbox1">Others</label>
+        </div>
+      </div>
+      <form class="d-flex me-5" role="search">
+        <input class="form-check-inline me-2" type="search" placeholder="Search" aria-label="Search">
+        <button type="button" class="btn btn-dark">Search</button>
+      </form>
+    </div>
+    <div class="d-flex mt-5 justify-content-evenly pb-5">
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/Maraton3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">10K for life</h5>
+          <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+          <div class="d-flex justify-content-between mt-5 align-items-center ">
+            <p>Prize: $3 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/books.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">School Book Fair</h5>
+          <p class="card-text">Bring your unused school book and bring the one you need.</p>
+          <div class="d-flex justify-content-between mt-5 align-items-center ">
+            <p>Prize: $1 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/Cine7.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Avengers</h5>
+          <p class="card-text pb-3">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
+          <div class="d-flex justify-content-between mt-5 pt-4 align-items-center ">
+            <p>Prize: $250 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="./assets/images/Feria de comidas7.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Festival of the collectivities</h5>
+          <p class="card-text pb-3">Enjoy your favorite dishes from different countries in a unique event for the
+            whole family.</p>
+          <div class="d-flex justify-content-between mt-4 align-items-center ">
+            <p>Prize: $5 USD</p>
+            <a href="./carts.html" class="btn btn-primary">See More</a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
+
+    <img
+      src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
+      alt="" id="iconos" class="pt-2 ps-5">
+
+    <h4 class="pt-2 pe-5">Cohort 44/45</h4>
+
+  </footer>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
