--- a/index.html
+++ b/index.html
@@ -78,36 +78,46 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="d-flex align-items-center justify-content-between pt-4 ">
-            <div>
+        <div class="d-flex align-items-center justify-content-center pt-4 flex-wrap gap-3">
+            <div class="d-flex gap-3 flex-wrap cajas">
                 <div class="form-check form-check-inline ms-2 ">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" value="option1">
                         Food Fair</label>
                 </div>
-                <div class="form-check form-check-inline ms-2">
+                <div class="form-check form-check-inline ms-2 ">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" value="option2">
                         Museum</label>
                 </div>
-                <div class="form-check form-check-inline ms-2">
+                <div class="form-check form-check-inline ms-2 ">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" value="option3">
                         Costume Party</label>
                 </div>
-                <div class="form-check form-check-inline ms-2">
+                <div class="form-check form-check-inline ms-2 ">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" value="option4">
                         Music Concert</label>
                 </div>
-                <div class="form-check form-check-inline ms-2">
+                <div class="form-check form-check-inline ms-2 ">
                     <label class="form-check-label">
                         <input class="form-check-input" type="checkbox" value="option5">
-                        Others</label>
+                        Race</label>
+                </div>
+                <div class="form-check form-check-inline ms-2 ">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option5">
+                        Book Exchange</label>
+                </div>
+                <div class="form-check form-check-inline ms-2 ">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" value="option5">
+                        Let's go to the cinema</label>
                 </div>
             </div>
-            <form class="d-flex me-3" role="search">
-                <input class="form-check-inline me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex me-3 justify-content-center" role="search">
+                <input class="form-check-inline me-2 buscar" type="search" placeholder="Search" aria-label="Search">
                 <button type="button" class="btn btn-dark">Search</button>
             </form>
         </div>
@@ -164,13 +174,10 @@
         </div>
     </main>
     <footer
-        class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
-
+        class="d-flex border-2 border-top border-dark bg-white text-black  justify-content-center align-items-center flex-wrap">
+        <h4 class="col-lg-8">Cohort 44/45</h4>
         <img src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
-            alt="" id="iconos" class="pt-2 ps-5">
-
-        <h4 class="pt-2 pe-5">Cohort 44/45</h4>
-
+            alt="" id="iconos">
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
