--- a/contact.html
+++ b/contact.html
@@ -15,34 +15,35 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-md bg-secondary">
-        <div class="container-fluid">
-            <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                <li class="nav-item">
-                    <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="./past.html">Past Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn boton me-4" href="./stats.html">Stats</a>
-                </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <img class="col-5 col-sm-4 col-lg-2 col-md-2 ms-2" src="./assets/images/logo.png" alt="">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+            <li class="nav-item">
+              <a class="btn boton me-4" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./upcoming.html">Upcoming Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./past.html">Past Events</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn boton me-4" href="./stats.html">Stats</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-</header>
+      </div>
+    </nav>
+  </header>
   <main class="bg-danger-subtle">
     <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
       <div class="carousel-inner">
@@ -98,14 +99,12 @@
       <button type="submit" class="btn btn-primary">Send</button>
     </form>
   </main>
-  <footer class="border-2 border-top border-dark bg-white text-black d-flex justify-content-between align-items-center">
-
+  <footer
+    class="d-flex border-2 border-top border-dark bg-white text-black  justify-content-center align-items-center flex-wrap">
+    <h4 class="col-lg-8">Cohort 44/45</h4>
     <img
       src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
-      alt="" id="iconos" class="pt-2 ps-5">
-
-    <h4 class="pt-2 pe-5">Cohort 44/45</h4>
-
+      alt="" id="iconos">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
