--- a/carts.html
+++ b/carts.html
@@ -45,7 +45,7 @@
       </div>
     </nav>
   </header>
-  <main class="bg-danger-subtle d-flex justify-content-center" id="main">
+  <main class=" d-flex justify-content-center" id="main">
   
     
 
