--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       </div>
     </nav>
   </header>
-  <main class="bg-danger-subtle">
+  <main>
     <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
       <div class="carousel-inner">
         <div class="carousel-item active">
