--- a/stats.html
+++ b/stats.html
@@ -45,7 +45,7 @@
             </div>
         </nav>
     </header>
-    <main class="bg-danger-subtle">
+    <main>
         
         <div id="carouselExampleCaptions" class="carousel slide border-5 border-bottom border-dark">
             <div class="carousel-inner">
@@ -80,7 +80,7 @@
             </button>
         </div>
 
-        <div class="d-flex justify-content-center pt-5 pb-3">
+        <div class="d-flex flex-column justify-content-center align-items-center pt-5 pb-3">
             <table class="table table-bordered border-dark-subtle bg-body-secondary">
                 <thead class="bg-dark-subtle">
                     <tr>
@@ -93,74 +93,37 @@
                         <td>Events with the lowesrt percentage of attendance</td>
                         <td>Event with larger capacity</td>
                     </tr>
+                </tbody>
+            </table>
+            <table  class="table table-bordered border-dark-subtle bg-body-secondary">
+                <thead class="bg-dark-subtle">
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th colspan="3">Upcoming events statistics by category</th>
                     </tr>
-                    <tr>
-
-                        <td colspan="3" class="bg-dark-subtle cabeza">Upcoming events statistics by category</td>
-
-                    </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <td>Categories</td>
                         <td>Revenues</td>
                         <td>Percentage of attendance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-
-                        <td colspan="3" class="bg-dark-subtle cabeza">Past events statistics by category</td>
-
-                    </tr>
-                    <tr>
-                        <td>Categories</td>
-                        <td>Revenues</td>
-                        <td>Percentage of attendance</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
+            <table  class="table table-bordered border-dark-subtle bg-body-secondary">
+                <thead class="bg-dark-subtle">
+                <tr>
+                    <th colspan="3">Past events statistics by category</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Categories</td>
+                    <td>Revenues</td>
+                    <td>Percentage of attendance</td>
+                </tr>
+
+            </tbody>
+            </table>    
         </div>
 
     </main>
@@ -170,7 +133,7 @@
         <img src="https://static.vecteezy.com/system/resources/previews/005/689/653/non_2x/facebook-whatsapp-instagram-app-icons-and-logos-free-vector.jpg"
             alt="" id="iconos">
     </footer>
-
+    <script src="./assets/js/stats.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
